Fixing multiple scenes version of Flappy Dragon

--- a/phaser3-flappy_dragon/aux/form.html
+++ b/phaser3-flappy_dragon/aux/form.html
@@ -1,20 +1,10 @@
 <html>
     <head>
-        <style>
-            #input-form {
-                padding: 15px;
-                background-color: #000;
-            }
-            #input-form input {
-                padding: 10px;
-                font-size: 20px;
-                width: 200px;
-            }
-        </style>
+        <link rel="stylesheet" type="text/css" href="aux/form.css">
     </head>
     <body>
-        <div id="input-form">
-            <input type="text" name="name" placeholder="Full Name" />
+        <div id="input-form" class="webflow-style-input">
+            <input  type="text" name="name" placeholder="Nome do jogador(a)" maxlength="5"/>
         </div>
     </body>
 </html>
