--- a/phaser3-flappy_dragon/scenes.html
+++ b/phaser3-flappy_dragon/scenes.html
@@ -3,13 +3,15 @@
 <head> 
     <meta charset="UTF-8" />
     <title>Flappy Bird</title>
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/phaser@3.23.0/dist/phaser.js"></script>
     <script src="scenes/FlappyDragon.js"></script>
     <script src="scenes/Welcome.js"></script>
 
     <style>
         body {
             text-align: center;
+            display: grid;
+            justify-items: center;
         }
 
         canvas {
@@ -26,8 +28,7 @@
     <script type="text/javascript">
         /*Global variables definition*/
         const config = {
-            type: Phaser.CANVAS,
-            autoCenter: true,
+            type: Phaser.AUTO,
             width: 400, //largura da tela do jogo
             height: 600, //altura da tela do jogo
             backgroundColor: '#39addd',
@@ -46,12 +47,7 @@
         };
         
         var game = new Phaser.Game(config);
-        var score = 0;
-        var playerName = '';
-        game.scene.start('Welcome', {game: game});
-        /* game.scene.start('FlappyDragon', {gameGravity: config.physics.arcade.gravity.y, 
-                                          gameWidth: config.width, gameHeight: config.height,
-                                          score: score}); */
+        game.scene.start('Welcome');
     </script>
 
 </body>
