Trying to make it responsive

--- a/phaser3-flappy_dragon/scenes.html
+++ b/phaser3-flappy_dragon/scenes.html
@@ -29,6 +29,7 @@
         /*Global variables definition*/
         const config = {
             type: Phaser.AUTO,
+            mode: Phaser.Scale.FIT,
             width: 400, //largura da tela do jogo
             height: 600, //altura da tela do jogo
             backgroundColor: '#39addd',
