--- a/phaser3-flappy_dragon/index.html
+++ b/phaser3-flappy_dragon/index.html
@@ -2,12 +2,15 @@
 <html lang="en"> 
 <head> 
     <meta charset="UTF-8" />
-    <title>Flappy Bird</title>
+    <title>Flappy Dragon</title>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.23.0/dist/phaser.js"></script>
+    <script src="scenes/FlappyDragon.js"></script>
+    <script src="scenes/Welcome.js"></script>
 
     <style>
         body {
-            text-align: center;
+            margin-top: 1px;
+            padding: 0;
         }
 
         canvas {
@@ -19,12 +22,16 @@
 
 <body>
 
-    <script type="text/javascript">
+    <div id="game"></div>
 
-        /*Definição de variáveis globais*/
-        this.config = {
+    <script type="text/javascript">
+        /*Global variables definition*/
+        const config = {
             type: Phaser.AUTO,
-            autoCenter: true,
+            scale: {
+                mode: Phaser.Scale.FIT
+            },
+            autoCenter: Phaser.Scale.CENTER,
             width: 400, //largura da tela do jogo
             height: 600, //altura da tela do jogo
             backgroundColor: '#39addd',
@@ -32,186 +39,18 @@
                 default: 'arcade',
                 arcade: {
                     gravity: { y: 10 },
-                    debug: true //controla se as linhas dos limites dos objetos sao mostradas
+                    debug: false //controla se as linhas dos limites dos objetos sao mostradas
                 }
             },
-            scene: {
-                preload: preload,
-                create: create,
-                update: update
-            }
+            parent: "game",
+            dom:{
+               createContainer: true,
+            },
+            scene: [Welcome, FlappyDragon]
         };
-
-        var game_obj = new Phaser.Game(this.config);
-
-        // *** 1) FUNDO *****
-        // A imagem do fundo possui 1200 de largura e 400 de altura.
-        // Mas somente uma janela de 400x400 é exibida por vez.
-        // Essa janela vai se alterando, simulando o movimento do fundo
-        // As variáveis possibilitam o controle da janela em exibição
-        var bg = {
-            x_start: 0,
-            x: 0,
-            y: 200,
-            x_end: -800,
-            obj: null
-        };
-
-        // *** 2) COLUNA *****
-        //Os parâmetros speed e space podem ser alterados para deixar o jogo mais fácil ou mais difícil
-        var cols = {
-            speed: 60, // velocidade com que as colunas passam, quanto maior, mais rápidamente passam
-            space: 180, // vão entre as colunas por onde o dragão tem que passar, quanto maior mais espaço entre as colunas
-            x: 500, // posição inicial à direita do canvas, quanto maior, mais tempo demora para a coluna aparecer
-            min_x: 400,
-            max_x: 800,
-            y: -400, // posição inicial acima do canvas, quanto maior, mais para cima aparece a coluna inferior
-            min_y: -500,
-            max_y: -200,
-            height: 600, // altura da imagem da coluna,
-            width: 50,
-            col1_obj: null,
-            col2_obj: null
-        };
-
-        // *** 3) JOGADOR *****
-        var player = {
-            width: 170,
-            height: 133,
-            obj: null
-        };
-
-        // *** 4) CONTROLES DA RODADA *****
-        var gameControls = {
-            over: false,
-            current_col_scored: false,
-            score: 0,
-            restartText: null,
-            restartMessage: 'Pressione SHIFT para reiniciar',
-        }; 
-
-        /*******************************/
-
-        function preload(){
-            this.load.image('bg', 'img/fundo.png');
-            this.load.spritesheet('dragon', 'img/dragao.png', { frameWidth: player.width, frameHeight: player.height });
-            this.load.image('col_bottom', 'img/coluna_bottom.png');
-            this.load.image('col_upper', 'img/coluna_upper.png');
-            this.load.image('game_over', 'img/gameover.png');
-        }
-
-
-        function create(){
-            /*Adiciona a imagem de fundo e a salva na chave "obj" da variável "bg"*/
-            bg.obj = this.add.image(bg.x, bg.y, 'bg').setOrigin(0,0);
-
-
-            /*Adiciona imagens das colunas*/
-            cols.col1_obj = this.add.image(cols.x, cols.y, 'col_upper').setOrigin(0,0);
-            cols.col2_obj = this.add.image(cols.x, cols.y + cols.height + cols.space, 'col_bottom').setOrigin(0,0);
-            this.physics.add.existing(cols.col1_obj);
-            this.physics.add.existing(cols.col2_obj);
-            cols.col1_obj.body.allowGravity = false; 
-            cols.col2_obj.body.allowGravity = false;
-            cols.col1_obj.body.setVelocityX(-cols.speed); 
-            cols.col2_obj.body.setVelocityX(-cols.speed); 
-
-            /*Adiciona jogador e suas propriedades físicas*/
-            player.obj = this.physics.add.sprite(170, 130, 'dragon').setScale(.8);
-            player.obj.body.setSize(50,80,true);
-            player.obj.setCollideWorldBounds(true);
-
-
-            /*Adiciona animação da imagem do jogador*/
-            this.anims.create({
-                key: 'fly',
-                frames: this.anims.generateFrameNumbers('dragon', { start: 0, end: 2 }),
-                frameRate: 10,
-                repeat: -1
-            });
-            /*Adiciona a animação do movimento do jogador*/
-            player.obj.anims.play('fly');
-
-            /*Adiciona os cursores que movimentarão o jogador*/
-            cursors = this.input.keyboard.createCursorKeys();
-            pointer = this.input.activePointer;
-
-            /*Adiciona os monitores de colisão*/
-            this.physics.add.overlap(player.obj, cols.col1_obj, hitCol, null, this);
-            this.physics.add.overlap(player.obj, cols.col2_obj, hitCol, null, this);
-
-            /*Mostrar o placar*/
-            scoreText = this.add.text(15, 15, 'score: 0', { fontSize: '20px', fill: '#000' });
-            gameControls.restartText = this.add.text(15, config.height - 50, gameControls.restartMessage, 
-                                        { fontSize: '20px', fill: 'white', backgroundColor: 'black'});
-            gameControls.restartText.visible = false;
-        }
-
-
-        function update(){
-            /*Controla se o jogo acabou e se a tecla que o reinicia foi acionada*/
-            if (gameControls.over){
-                if (cursors.shift.isDown){
-                    gameControls.over = false;
-                    gameControls.score = 0;
-                    cols.x = - cols.width -1;
-                    this.scene.restart();
-                }
-                return 
-            }
-                
-            /*Atualiza a posicao da imagem de fundo*/
-            bg.x--;
-            if (bg.x < bg.x_end){
-                bg.x = bg.x_start;
-            }
-            bg.obj.x = bg.x;
-
-
-            /*Atualiza posicao das colunas*/
-            cols.x = cols.col1_obj.x
-            if (cols.x < - cols.width){
-                cols.x = Phaser.Math.FloatBetween(cols.min_x, cols.max_x); // sorteia o intervalo antes das próximas colunas
-                cols.col1_obj.x = cols.x
-                cols.col2_obj.x = cols.x
-
-                cols.y = Phaser.Math.FloatBetween(cols.min_y, cols.max_y); // sorteia a posição vertical
-                cols.col1_obj.y = cols.y;
-                cols.col2_obj.y = cols.y + cols.height + cols.space;
-
-                gameControls.current_col_scored = false;
-            }
-
-            /*Inclui controle de movimentação do dragao*/
-            if (cursors.left.isDown)
-                player.obj.setX(player.obj.x-5);
-            else if (cursors.right.isDown)
-                player.obj.setX(player.obj.x+5);
-            else if (cursors.up.isDown || cursors.space.isDown || pointer.isDown)
-                player.obj.setY(player.obj.y-config.physics.arcade.gravity.y);
-            else if (cursors.down.isDown)
-                player.obj.setY(player.obj.y+config.physics.arcade.gravity.y);
-
-
-            /*Verifica se o jogador passou pelas colunas*/
-            if (!gameControls.current_col_scored){
-                if (player.obj.x - player.width/2 > cols.x + cols.width){
-                    gameControls.score++;
-                    gameControls.current_col_scored = true;
-                    scoreText.setText( 'score: ' + gameControls.score);
-                }
-            }
-        }
-
-
-        function hitCol(player_obj, col_obj){
-            this.physics.pause();
-            player.obj.anims.stop('fly');
-            player.obj.setTint(0xff0000);
-            gameControls.over = true;
-            this.add.image(config.width/2, config.height/2, 'game_over').setScale(.5);
-            gameControls.restartText.visible = true;
-        }
+        
+        var game = new Phaser.Game(config);
+        game.scene.start('Welcome');
     </script>
 
 </body>
